# skytrack_test_task

./: .gitignore  README.md  alembic.ini  docker-compose.yml  fill_database.py  install_dependencies.sh  main.py  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: cfc5092b5767_init.py
source/api/: utils.py  views.py
source/api/schemas/: base_schemas.py  request.py  response.py
source/database/: database.py  models.py
tests/: schemas.py  tests.py
