[tool.poetry]
name = "skytrack_test_task"
version = "0.1.0"
description = "Test task on writing REST-Api service"
authors = ["Bazarovinc"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.22"
alembic = "^1.6.5"
psycopg2-binary = "^2.9.1"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
